policy-as-code/lab07-opa-kyverno/kyverno-policies/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
  annotations:
    policies.kyverno.io/title: Require Non Root
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: high
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Containers must run as non-root."
        anyPattern:
          - spec:
              securityContext:
                runAsNonRoot: true
              containers:
                - securityContext:
                    runAsNonRoot: true
          - spec:
              containers:
                - securityContext:
                    runAsNonRoot: true
